# Projet-5-Deployer-un-modele-de-machine-learning

./: .coverage  .dockerignore  .env  .gitignore  01_classe.joblib  404.html  Dockerfile  README.md  class_index.html  convert_to_joblib.py  create_tables.py  create_tables_py.html  database.py  database_py.html  feature_names.pkl  fix_missing_docs.ps1  function_index.html  import_data.py  import_data_py.html  index.html  main.py  main_py.html  mkdocs.yml  model_config.json  model_loader.py  model_loader_py.html  models.py  models_py.html  preprocessor.pkl  pyproject.toml  requirements.txt  schemas.py  schemas_py.html  sitemap.xml  status.json  test_db_py.html  train_final_model.py  train_final_model_py.html  xgboost_model.pkl  z_7b379d402907dd8c___init___py.html  (+12 more)
.github/workflows/: ci.yml
about/contact/: index.html
about/license/: index.html
api/endpoints/: index.html
api/schemas/: index.html
api/swagger/: index.html
archives/: test_db.py  train_final_model_original.py
docs/: index.md
docs/about/: contact.md  license.md
docs/api/: endpoints.md  schemas.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/javascripts/: extra.js
docs/operations/: maintenance.md  monitoring.md  retraining.md  rollback.md
docs/standards/: code-conventions.md  project-standards.md  testing.md
docs/technical/: architecture.md  database.md  justifications.md  model.md
docs/user-guide/: api-usage.md  authentication.md  errors.md  examples.md
getting-started/installation/: index.html
getting-started/overview/: index.html
getting-started/quickstart/: index.html
models/: xgboost_pipeline.joblib
operations/maintenance/: index.html
operations/monitoring/: index.html
operations/retraining/: index.html
operations/rollback/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
site/search/: search_index.json
standards/code-conventions/: index.html
standards/project-standards/: index.html
standards/testing/: index.html
stylesheets/: extra.css
technical/architecture/: index.html
technical/database/: index.html
technical/justifications/: index.html
technical/model/: index.html
tests/: conftest.py
tests/data/: edge_cases.json  invalid_employee.json  valid_employee.json
(+28 files in other folders)
