[project]
name = "deployer-un-modele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "coverage>=7.12.0",
    "fastapi[standard]>=0.121.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
