[project]
name = "deployer-un-modele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "coverage>=7.12.0",
    "fastapi[standard]>=0.121.1",
    "joblib>=1.5.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pymdown-extensions>=10.17.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "docs/*",
    "htmlcov/*",
    "*.ps1",
    "create_tables.py",
    "import_data.py",
    "train_final_model.py",
    "convert_to_joblib.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"